FIX: fixed button alignment on ios

--- a/movein-server/movein-client/src/components/Button/AddButton.module.css
+++ b/movein-server/movein-client/src/components/Button/AddButton.module.css
@@ -8,9 +8,7 @@
   text-align: center;
   line-height: 2rem;
   display: flex;
-  margin: auto;
   justify-content: center;
   align-items: center;
   font-family: "Work Sans", sans-serif;
-  /*  */
 }
